add directions to the recipe

--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -9,11 +9,29 @@
         <img src="../images/congri.jpg" alt="black beans with rice">
         <h2>Cuban Congri: Black Beans and Rice</h2>
         <p>A traditional meal in every cuban household. At least what I used to eat a lot growing up. (This is excellent with anything, especially meat).</p>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 cup Rice</li>
             <li>1 cup Black Beans</li>
+            <li>2 tbs of oil</li>
             <li>2 cups waters</li>
-            <li>tbs salt and pepper</li>
+            <li>A pinch of salt and pepper</li>
         </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>In a big, pot pour the oil.</li>
+            <li>After the oil is heated, add the black beans and cook them in the oil for 1 minute.</li>
+            <li>Add the water. Once it's boiled, cover the lid and let it cock for an hour.</li>
+            <li>When the beans are al dente (cooked but still a little hard) remove from the stove. There should still be some water in the pot.</li>
+            <li>Put the beans aside and don't throw away the water!.</li>
+            <li>In another pot, heat some oil like before and add the rice.</li>
+            <li>Strain the water from the black beans pot and use that as the water to cook the rice. In case you need
+                 to add more water to cover the rice, that's ok. You want the rice to be covered.
+            </li>
+            <li>Cook the rice for 15 minutes. After that, add the black beans to the pot and cook for 10 more minutes.</li>
+            <li>Done! Enjoy.</li>
+
+                
+        </ol>
     </body>
     </html> 
