--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/congri.html">Cuban Congri</a></p>
-        <!--I added this code for the image as before but it doesn't bring up the image-->
-        <img src="./images/congri.jpg" alt="black beans with rice">
+        <p><a href="./recipes/oatmeal.html">Basic Oatmeal</a></p>
+        
     </body>
     </html>
 
