--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -7,11 +7,11 @@
 
   <body>
     <h1>Basic Oatmeal</h1>
-    <img scr="../images/oatmeal.jpg" alt="yummy oatmeal">
+    <img src="../images/oatmeal.jpg" alt="yummy oatmeal">
     
    <h2>Ingredients</h2>
    <ul>
-    <li>1 cup oatmeal<li>
+    <li>1 cup oatmeal</li>
     <li>1.5 cup milk of choice</li>
     <li>1 tbs maple syrup</li>
     <li>toppings of your choice! Apple, strawberry, or whatever</li>
@@ -26,7 +26,7 @@
     <li>Enjoy the healthy choice you made.</li>
    </ol>
 
-   <a href="./index.html" More recipes></a> 
+   <a href="index.html">More Recipes</a> 
     
   </body>
 
