add all pages and link between them

--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -26,11 +26,9 @@
     <li>Enjoy the healthy choice you made.</li>
    </ol>
 
-   <a href="index.html">More Recipes</a> 
+   <a href="../index.html">More Recipes</a> 
     
   </body>
-
-
 
 
 
