--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -28,7 +28,7 @@
     <li>It ain't much but it's pasta for lazy people, and you made it. Enjoy.</li>
    </ol>
 
-   <a href="index.html">More Recipes</a> 
+   <a href="../index.html">More Recipes</a> 
     
   </body>
 
