--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -31,7 +31,7 @@
             <li>Cook the rice for 15 minutes. After that, add the black beans to the pot and cook for 10 more minutes.</li>
             <li>Done! Enjoy.</li>
 
-                
+            <a href="../index.html">More Recipes</a>    
         </ol>
     </body>
     </html> 
