add three links to other pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/congri.html">Cuban Congri</a></p>
         <p><a href="./recipes/oatmeal.html">Basic Oatmeal</a></p>
+        <p><a href="./recipes/pasta.html">Classic Pasta</a></p>
         
     </body>
     </html>
