make css changes

--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>oatmeal</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -11,16 +12,16 @@
     
    <h2>Ingredients</h2>
    <ul>
-    <li>1 cup oatmeal</li>
-    <li>1.5 cup milk of choice</li>
-    <li>1 tbs maple syrup</li>
-    <li>toppings of your choice! Apple, strawberry, or whatever</li>
+    <li>1 cup oatmeal.</li>
+    <li>1.5 cup milk of choice.</li>
+    <li>1 tbs maple syrup.</li>
+    <li>Toppings of your choice! Apple, strawberry, or whatever.</li>
    </ul>
 
    <h2>Directions</h2>
    <ol>
     <li>In a pot, bring the milk to boil.</li>
-    <li>Add to maple syrup.</li>
+    <li>Add the maple syrup.</li>
     <li>Add the oatmeal and cook for 10 minutes until the oats are soft and creamy.</li>
     <li>Pour to a bowl and add your toppings</li>
     <li>Enjoy the healthy choice you made.</li>
