add css file. Now remove and starting all over with css

--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -10,23 +10,27 @@
     <h1>Basic Oatmeal</h1>
     <img src="../images/oatmeal.jpg" alt="yummy oatmeal">
     
-   <h2>Ingredients</h2>
+    <div class="ingredients">
+      <h2>Ingredients</h2>
    <ul>
     <li>1 cup oatmeal.</li>
     <li>1.5 cup milk of choice.</li>
     <li>1 tbs maple syrup.</li>
     <li>Toppings of your choice! Apple, strawberry, or whatever.</li>
    </ul>
+  </div>
 
-   <h2>Directions</h2>
-   <ol>
-    <li>In a pot, bring the milk to boil.</li>
-    <li>Add the maple syrup.</li>
-    <li>Add the oatmeal and cook for 10 minutes until the oats are soft and creamy.</li>
-    <li>Pour to a bowl and add your toppings</li>
-    <li>Enjoy the healthy choice you made.</li>
-   </ol>
 
+  <div class="directions">
+     <h2>Directions</h2>
+     <ol>
+     <li>In a pot, bring the milk to boil.</li>
+     <li>Add the maple syrup.</li>
+     <li>Add the oatmeal and cook for 10 minutes until the oats are soft and creamy.</li>
+     <li>Pour to a bowl and add your toppings</li>
+     <li>Enjoy the healthy choice you made.</li>
+    </ol>
+  </div>
    <a href="../index.html">More Recipes</a> 
     
   </body>
