--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Homepage</title>
-    </head>
+        <link rel="stylesheet" href="./css/style.css"> 
+        </head>
     <body>
         <h1>Odin Recipes</h1>
         <p><a href="./recipes/congri.html">Cuban Congri</a></p>
