--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>congris</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Cuban Congri</h1>
