--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -10,6 +10,8 @@
         <img src="../images/congri.jpg" alt="black beans with rice">
         <h2>Cuban Congri: Black Beans and Rice</h2>
         <p>A traditional meal in every cuban household. At least what I used to eat a lot growing up. (This is excellent with anything, especially meat).</p>
+        
+    <div class="ingr">
         <h2>Ingredients</h2>
         <ul>
             <li>1 cup Rice</li>
@@ -18,6 +20,9 @@
             <li>2 cups waters</li>
             <li>A pinch of salt and pepper</li>
         </ul>
+    </div>
+
+    <div class="dire">
         <h2>Directions</h2>
         <ol>
             <li>In a big, pot pour the oil.</li>
@@ -31,6 +36,8 @@
             </li>
             <li>Cook the rice for 15 minutes. After that, add the black beans to the pot and cook for 10 more minutes.</li>
             <li>Done! Enjoy.</li>
+
+        </div>
 
             <a href="../index.html">More Recipes</a>    
         </ol>
