--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -10,7 +10,7 @@
     <h1>Basic Oatmeal</h1>
     <img src="../images/oatmeal.jpg" alt="yummy oatmeal">
     
-    <div class="ingredients">
+    <div class="ingr">
       <h2>Ingredients</h2>
    <ul>
     <li>1 cup oatmeal.</li>
@@ -19,9 +19,9 @@
     <li>Toppings of your choice! Apple, strawberry, or whatever.</li>
    </ul>
   </div>
+</div>
 
-
-  <div class="directions">
+  <div class="dire">
      <h2>Directions</h2>
      <ol>
      <li>In a pot, bring the milk to boil.</li>
