--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,16 +9,16 @@
   <body>
     <h1>Classic Pasta</h1>
     <img src="../images/pasta.jpg" alt="yummy oatmeal">
-    
+    <div class="ingr">
    <h2>Ingredients</h2>
    <ul>
     <li>1 cup pasta</li>
     <li>2 cup water</li>
     <li>1 tbs salt</li>
     <li>1/2 cup tomato sauce</li>
-   
+   </div>
    </ul>
-
+   <div class="dire">
    <h2>Directions</h2>
    <ol>
     <li>In a pot, boil the water and add the salt.</li>
@@ -28,7 +28,7 @@
     <li>Pour over the pasta the tomato sauce</li>
     <li>It ain't much but it's pasta for lazy people, and you made it. Enjoy.</li>
    </ol>
-
+  </div>
    <a href="../index.html">More Recipes</a> 
     
   </body>
