Change CSS use inline-block

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" href="./css/style.css">
         </head>
     <body>
-        <h1>Odin Recipes</h1>
-        
-         <p><a href="./recipes/congri.html">Cuban Congri</a></p>
-         <p><a href="./recipes/oatmeal.html">Basic Oatmeal</a></p>
-         <p><a href="./recipes/pasta.html">Classic Pasta</a></p>
-        
+        <nav>
+        <h1 style="text-align: center; font-size: 50px;">Arlette's Odin Recipes</h1>
+        <ul class:"start">
+         <li><a href="./recipes/congri.html">Cuban Congri</a></li>
+         <li><a href="./recipes/oatmeal.html">Basic Oatmeal</a></li>
+         <li><a href="./recipes/pasta.html">Classic Pasta</a></li>
+        </ul>
+        </nav>
 
     </body>
     </html>
