--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>congris</title>
+        <title>congri</title>
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
